--- a/프로젝트모음/appleShop_src/main/webapp/WEB-INF/web.xml
+++ b/프로젝트모음/appleShop_src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,31 @@
   </welcome-file-list>
   
   
+  <!-- error페이지 등록 -->
+ <error-page> 
+    <error-code>404</error-code>
+    <location>/error/error404.jsp</location>
+</error-page>
+
+<error-page>
+    <error-code>500</error-code>
+    <location>/error/error500.jsp</location>
+</error-page>
+  
+  
+  
+  <!-- filter등록하기 -->
+<!--   <filter>
+  	<filter-name>encoding</filter-name>
+  	<filter-class>com.shinhan.filter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>encoding</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping> -->
+  
+  
+  
   <!-- 웹어플리케이션에 파라메터 전달 -->
   <context-param>
   	<param-name>DBName</param-name>
@@ -57,6 +82,8 @@
   	<servlet-name>myServlet1</servlet-name>
   	<url-pattern>/first</url-pattern>
   </servlet-mapping> -->
+  
+  
   
   
   
