--- a/프로젝트모음/springLegacyProject_src/main/webapp/WEB-INF/web.xml
+++ b/프로젝트모음/springLegacyProject_src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,34 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
+
+
+	<!-- Spring이 제공한 Filter등록하기 왜? post일때 한글깨짐 방지 -->
+	<filter>
+	<filter-name>encodingFilter</filter-name>
+	<filter-class>
+	org.springframework.web.filter.CharacterEncodingFilter
+	</filter-class>
+	<init-param>
+	<param-name>encoding</param-name>
+	<param-value>UTF-8</param-value>
+	</init-param>
+	</filter>
+	  <filter-mapping>
+	<filter-name>encodingFilter</filter-name>
+	<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	
+
+
 	<!-- ServletContext의 파라메터 (전체적인 설정이 필요할때)-->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>
+		/WEB-INF/spring/root-context.xml
+		/WEB-INF/spring/root-context-oracle.xml
+		</param-value>
 	</context-param>
 	
 	
@@ -36,5 +60,7 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	
 
 </web-app>
