--- a/프로젝트모음/springLegacyProject_src/main/webapp/WEB-INF/web.xml
+++ b/프로젝트모음/springLegacyProject_src/main/webapp/WEB-INF/web.xml
@@ -1,66 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-
-
-
-	<!-- Spring이 제공한 Filter등록하기 왜? post일때 한글깨짐 방지 -->
-	<filter>
-	<filter-name>encodingFilter</filter-name>
-	<filter-class>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+  
+  
+  <filter>
+    <filter-name>encodingFilter</filter-name>
+    <filter-class>
 	org.springframework.web.filter.CharacterEncodingFilter
 	</filter-class>
-	<init-param>
-	<param-name>encoding</param-name>
-	<param-value>UTF-8</param-value>
-	</init-param>
-	</filter>
-	  <filter-mapping>
-	<filter-name>encodingFilter</filter-name>
-	<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	
-	
-
-
-	<!-- ServletContext의 파라메터 (전체적인 설정이 필요할때)-->
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>encodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>
 		/WEB-INF/spring/root-context.xml
 		/WEB-INF/spring/root-context-oracle.xml
 		</param-value>
-	</context-param>
-	
-	
-	
-	<!-- Creates the Spring Container shared by all Servlets and Filters -->
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-
-
-
-
-	<!-- DispatcherServlet : FrontControll이다. -->
-	<servlet>
-		<servlet-name>appServlet</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>
+  </context-param>
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <servlet>
+    <servlet-name>appServlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>
 			/WEB-INF/spring/appServlet/servlet-context.xml
 			</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-		
-	<servlet-mapping>
-		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
-	
-	
-
+    </init-param>
+    
+    <!--  -->
+    <init-param>
+      <param-name>throwExceptionIfNoHandlerFound</param-name>
+      <param-value>true</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>appServlet</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+  <filter>
+    <display-name>LoginChkFilter</display-name>
+    <filter-name>LoginChkFilter</filter-name>
+    <filter-class>com.shinhan.spring.filter.LoginChkFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>LoginChkFilter</filter-name>
+    <url-pattern>/LoginChkFilter</url-pattern>
+  </filter-mapping>
+  
+  
 </web-app>
